--- a/portfolio.html
+++ b/portfolio.html
@@ -11,119 +11,197 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
-      <nav class="header-nav">
-        <a href="" lang="en" class="logo">Web<span class="logo-dark">Studio</span></a>
-        <ul class="header-nav-list">
-          <li class="header-nav-item"><a href="./index.html" class="header-nav-link">Студия</a></li>
-          <li class="header-nav-item"><a href="" class="header-nav-link current">Портфолио</a></li>
-          <li class="header-nav-item"><a href="" class="header-nav-link">Контакты</a></li>
-        </ul>
-      </nav>
-      <ul>
-        <li>
-          <a href="mailto:info@devstudio.com" lang="en" class="header-link-contacts"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li><a href="tel:+380961111111" class="header-link-contacts">+38 096 111 11 11</a></li>
-      </ul>
-    </header>
-    <main>
-      <section>
-        <h1 class="visually-hidden">Портфолио</h1>
-        <ul class="filters-list">
-          <li class="filters-list-item">
-            <button type="button" class="filter-buttons">Все</button>
-          </li>
-          <li class="filters-list-item">
-            <button type="button" class="filter-buttons">Веб-сайты</button>
-          </li>
-          <li class="filters-list-item">
-            <button type="button" class="filter-buttons">Приложения</button>
-          </li>
-          <li class="filters-list-item">
-            <button type="button" class="filter-buttons">Дизайн</button>
-          </li>
-          <li class="filters-list-item">
-            <button type="button" class="filter-buttons">Маркетинг</button>
-          </li>
-        </ul>
-        <ul class="project-list">
-          <li class="project-list-item">
-            <img src="./images/notepad.jpg" alt="working-notepad" width="370" />
-            <h3 class="project-title">Технокряк</h3>
-            <p class="project-after-title">Веб-сайт</p>
-          </li>
-          <li class="project-list-item">
-            <img src="./images/basketball.jpg" alt="poster-with-basketball players" width="370" />
-            <h3 class="project-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-            <p class="project-after-title">Дизайн</p>
-          </li>
-          <li class="project-list-item">
-            <img src="./images/seafood.jpg" alt="poster-with-seafish" width="370" />
-            <h3 class="project-title">Ресторан <span lang="en">Seafood</span></h3>
-            <p class="project-after-title">Приложение</p>
-          </li>
-          <li class="project-list-item">
-            <img src="./images/headphones.jpg" alt="black-headphones" width="370" />
-            <h3 class="project-title">Проект <span lang="en">Prime</span></h3>
-            <p class="project-after-title">Маркетинг</p>
-          </li>
-          <li class="project-list-item">
-            <img src="./images/boxes.jpg" alt="two-boxes" width="370" />
-            <h3 class="project-title">Проект <span lang="en">Boxes</span></h3>
-            <p class="project-after-title">Приложение</p>
-          </li>
-          <li class="project-list-item">
-            <img src="./images/monitor.jpg" alt="working-monitor" width="370" />
-            <h3 class="project-title"><span lang="en">Inspiration has no Borders</span></h3>
-            <p class="project-after-title">Веб-сайт</p>
-          </li>
-          <li class="project-list-item">
-            <img src="./images/book.jpg" alt="book" width="370" />
-            <h3 class="project-title">Издание <span lang="en">Limited Edition</span></h3>
-            <p class="project-after-title">Дизайн</p>
-          </li>
-          <li class="project-list-item">
-            <img src="./images/lable-tag.jpg" alt="clothing-tag" width="370" />
-            <h3 class="project-title">Проект<span lang="en">LAB</span></h3>
-            <p class="project-after-title">Маркетинг</p>
-          </li>
-          <li class="project-list-item">
-            <img src="./images/notebook.jpg" alt="man-working-at-notebook" width="370" />
-            <h3 class="project-title"><span lang="en">Growing Business</span></h3>
-            <p class="project-after-title">Приложение</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer class="footer">
-      <a href="" lang="en" class="logo">Web<span class="logo-white">Studio</span></a>
-      <address class="address">
-        <ul class="address-list">
-          <li class="address-list-item">
-            <a
-              href="https://goo.gl/maps/FSaTrgTVxkoQMMDFA"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              class="direct-address"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li class="address-list-item">
-            <a href="mailto:info@devstudio.com" lang="en" class="footer-link-contacts"
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a href="" lang="en" class="logo">Web<span class="logo-dark">Studio</span></a>
+          <ul class="header-nav-list">
+            <li class="header-nav-item">
+              <a href="./index.html" class="header-nav-link">Студия</a>
+            </li>
+            <li class="header-nav-item">
+              <a href="" class="header-nav-link current">Портфолио</a>
+            </li>
+            <li class="header-nav-item"><a href="" class="header-nav-link">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="header-contacts">
+          <li class="nav-contacts">
+            <a href="mailto:info@devstudio.com" lang="en" class="header-link-contacts"
               >info@devstudio.com</a
             >
           </li>
-          <li class="address-list-item">
-            <a href="tel:+380961111111" class="footer-link-contacts">+38 096 111 11 11</a>
+          <li class="nav-contacts">
+            <a href="tel:+380961111111" class="header-link-contacts">+38 096 111 11 11</a>
           </li>
         </ul>
-      </address>
+      </div>
+    </header>
+    <main>
+      <section class="filter-project">
+        <div class="container">
+          <h1 class="visually-hidden">Портфолио</h1>
+          <ul class="filters-list">
+            <li class="filters-list-item">
+              <button type="button" class="filter-buttons">Все</button>
+            </li>
+            <li class="filters-list-item">
+              <button type="button" class="filter-buttons">Веб-сайты</button>
+            </li>
+            <li class="filters-list-item">
+              <button type="button" class="filter-buttons">Приложения</button>
+            </li>
+            <li class="filters-list-item">
+              <button type="button" class="filter-buttons">Дизайн</button>
+            </li>
+            <li class="filters-list-item">
+              <button type="button" class="filter-buttons">Маркетинг</button>
+            </li>
+          </ul>
+          <div class="project">
+            <ul class="project-list">
+              <li class="project-list-item">
+                <img
+                  class="project-img"
+                  src="./images/notepad.jpg"
+                  alt="working-notepad"
+                  width="370"
+                />
+                <div class="text-bellow-technopig">
+                  <h2 class="project-title">Технокряк</h2>
+                  <p class="project-after-title">Веб-сайт</p>
+                </div>
+              </li>
+              <li class="project-list-item">
+                <img
+                  class="project-img"
+                  src="./images/basketball.jpg"
+                  alt="poster-with-basketball players"
+                  width="370"
+                />
+                <div class="text-bellow">
+                  <h2 class="project-title">
+                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                  </h2>
+                  <p class="project-after-title">Дизайн</p>
+                </div>
+              </li>
+              <li class="project-list-item">
+                <img
+                  class="project-img"
+                  src="./images/seafood.jpg"
+                  alt="poster-with-seafish"
+                  width="370"
+                />
+                <div class="text-bellow">
+                  <h2 class="project-title">Ресторан <span lang="en">Seafood</span></h2>
+                  <p class="project-after-title">Приложение</p>
+                </div>
+              </li>
+              <li class="project-list-item">
+                <img
+                  class="project-img"
+                  src="./images/headphones.jpg"
+                  alt="black-headphones"
+                  width="370"
+                />
+                <div class="text-bellow">
+                  <h2 class="project-title">Проект <span lang="en">Prime</span></h2>
+                  <p class="project-after-title">Маркетинг</p>
+                </div>
+              </li>
+              <li class="project-list-item">
+                <img class="project-img" src="./images/boxes.jpg" alt="two-boxes" width="370" />
+                <div class="text-bellow">
+                  <h2 class="project-title">Проект <span lang="en">Boxes</span></h2>
+                  <p class="project-after-title">Приложение</p>
+                </div>
+              </li>
+              <li class="project-list-item">
+                <img
+                  class="project-img"
+                  src="./images/monitor.jpg"
+                  alt="working-monitor"
+                  width="370"
+                />
+                <div class="text-bellow">
+                  <h2 class="project-title"><span lang="en">Inspiration has no Borders</span></h2>
+                  <p class="project-after-title">Веб-сайт</p>
+                </div>
+              </li>
+              <li class="project-list-item">
+                <img class="project-img" src="./images/book.jpg" alt="book" width="370" />
+                <div class="text-bellow">
+                  <h2 class="project-title">Издание <span lang="en">Limited Edition</span></h2>
+                  <p class="project-after-title">Дизайн</p>
+                </div>
+              </li>
+              <li class="project-list-item">
+                <img
+                  class="project-img"
+                  src="./images/lable-tag.jpg"
+                  alt="clothing-tag"
+                  width="370"
+                />
+                <div class="text-bellow">
+                  <h2 class="project-title">Проект<span lang="en">LAB</span></h2>
+                  <p class="project-after-title">Маркетинг</p>
+                </div>
+              </li>
+              <li class="project-list-item">
+                <img
+                  class="project-img"
+                  src="./images/notebook.jpg"
+                  alt="man-working-at-notebook"
+                  width="370"
+                />
+                <div class="text-bellow">
+                  <h2 class="project-title"><span lang="en">Growing Business</span></h2>
+                  <p class="project-after-title">Приложение</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-logo">
+          <a href="" lang="en" class="logo">Web<span class="logo-white">Studio</span></a>
+        </div>
+        <address class="address">
+          <ul class="address-list">
+            <li class="address-list-item">
+              <a
+                href="https://goo.gl/maps/FSaTrgTVxkoQMMDFA"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="direct-address"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="address-list-item">
+              <a href="mailto:info@devstudio.com" lang="en" class="footer-link-contacts"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-list-item">
+              <a href="tel:+380961111111" class="footer-link-contacts">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
